tests/paczka1/fuzzy1/89151239.err
Error in line 5: iwfR S748 41,8
Error in line 25: iwfR A738 26,77
Error in line 27: oeK0 S748 66,2
Error in line 29: u5LC0a4 A183 84,1
